# duck-diagnostic

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  labels.sh  protect-branches.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
examples/: README.md  api_validator.rs  compiler.rs  config_linter.rs  demo.rs  diff_suggestions.rs  json_output.rs  multi_file.rs  showcase.rs  sql_engine.rs  suggestion.rs
src/: compact.rs  diagnostic.rs  formatter.rs  json.rs  lib.rs  macros.rs  smart.rs  style.rs  utils.rs
tests/: integration.rs
