[package]
name = "duck-diagnostic"
version = "0.6.0"
edition = "2021"
authors = ["gentleduck"]
description = "Generic diagnostic engine for building rich error reporting into any tool"
license = "MIT"
repository = "https://github.com/gentleduck/duck-diagnostic"
homepage = "https://github.com/gentleduck/duck-diagnostic"
documentation = "https://docs.rs/duck-diagnostic"
keywords = ["diagnostic", "compiler", "error-reporting", "linter"]
categories = ["development-tools", "compilers"]
readme = "README.md"

[features]
default = ["json"]
json = ["serde", "serde_json"]

[dependencies]
colored = "3"
unicode-width = "0.2"
serde = { version = "1", features = ["derive", "rc"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
insta = "1"
